--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chat_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,5 +23,6 @@
         android:layout_below="@id/chat_item_text"
         android:layout_alignParentEnd="true"
         android:textStyle="italic"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible"/>
 </RelativeLayout>
