--- a/app/src/main/res/layout/activity_create_image.xml
+++ b/app/src/main/res/layout/activity_create_image.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/create_image_sv">
@@ -12,12 +13,14 @@
 
         <ProgressBar
             android:id="@+id/image_pb"
-            style="?android:attr/progressBarStyle"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="64dp"
             android:indeterminate="true"
+            android:indeterminateBehavior="cycle"
+            android:indeterminateDuration="2000"
             android:indeterminateTint="@color/wristassist_purple" />
 
         <TextView
@@ -31,9 +34,11 @@
             android:textSize="14sp"
             android:textAlignment="center"
             android:textColor="@color/wristassist_red"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <ImageButton
+            android:id="@+id/retry_image_btn"
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -44,22 +49,23 @@
             android:src="@drawable/twotone_replay_24"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
-            android:id="@+id/retry_image_btn"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <androidx.wear.widget.BoxInsetLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.jsibbold.zoomage.ZoomageView
+                android:id="@+id/create_image_iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                android:id="@+id/create_image_iv"
                 android:transitionName="image"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:zoomage_restrictBounds="false"
                 app:zoomage_animateOnReset="true"
                 app:zoomage_autoResetMode="UNDER"
@@ -74,6 +80,7 @@
         </androidx.wear.widget.BoxInsetLayout>
 
         <ImageButton
+            android:id="@+id/share_image_btn"
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -83,10 +90,11 @@
             android:src="@drawable/twotone_share_24"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
-            android:id="@+id/share_image_btn"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
+            android:id="@+id/expires_image_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -97,18 +105,19 @@
             android:textAlignment="center"
             android:textStyle="italic"
             android:text="@string/wristassist_image_expires_in"
-            android:id="@+id/expires_image_tv"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/save_discard_image_btns"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="48dp"
             android:layout_marginHorizontal="24dp"
             android:visibility="gone"
-            android:id="@+id/save_discard_image_btns">
+            tools:visibility="visible">
 
             <ImageButton
                 android:id="@+id/save_image_btn"
