--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/input_sv"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingHorizontal="10dp"
-    android:fillViewport="false"
-    android:id="@+id/input_sv">
+    android:paddingHorizontal="12dp"
+    android:fillViewport="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,8 +67,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="48dp"
             android:onClick="cancel"
+            android:backgroundTint="@color/wristassist_purple_dark"
             android:text="@string/wristassist_cancel" />
 
     </LinearLayout>
