--- a/app/src/main/res/layout/activity_saved_chats.xml
+++ b/app/src/main/res/layout/activity_saved_chats.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,8 +15,7 @@
         android:id="@+id/no_saved_chats"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="24dp"
         android:text="@string/wristassist_no_saved_chats"
         android:textAlignment="center"
         android:textSize="16sp"
