--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/activity_settings"
     android:orientation="vertical"
-    android:paddingVertical="8dp">
-</LinearLayout>
+    android:paddingVertical="8dp" />
