--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,12 +17,12 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.jsibbold.zoomage.ZoomageView
+            android:id="@+id/open_image_iv"
             android:layout_width="wrap_content"
             android:layout_height="64dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:background="@color/wristassist_black"
-            android:id="@+id/open_image_iv"
             android:transitionName="image"
             app:zoomage_zoomable="false"/>
     </androidx.cardview.widget.CardView>
