--- a/app/src/main/res/layout/layout_chat_header.xml
+++ b/app/src/main/res/layout/layout_chat_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -11,7 +12,7 @@
         android:paddingTop="16dp"
         android:paddingHorizontal="32dp"
         android:textAlignment="center"
-        android:textColor="#7B1FA2"
+        android:textColor="@color/wristassist_purple"
         android:textStyle="bold"
         android:textSize="18sp"
         android:visibility="gone"/>
