--- a/app/src/main/res/layout/layout_usage_footer.xml
+++ b/app/src/main/res/layout/layout_usage_footer.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingVertical="16dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/usage_total_cost_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:textStyle="bold"
         android:textSize="16sp" />
 
@@ -18,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
         android:onClick="resetUsage"
         android:text="@string/wristassist_reset" />
